Bug 225431 context submenus do not reappear if context menu is dismissed (e.g. by alt key) r=dbaron sr=bz a=asa